--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eb1a-form-dashboard</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="StraightGreenCard EB1A Application Navigator" />
+    <meta name="author" content="StraightGreenCard" />
 
     <meta property="og:title" content="eb1a-form-dashboard" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="StraightGreenCard EB1A Application Navigator" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/88567fb0-7213-4614-b9e3-55a0693cc568.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="StraightGreenCard EB1A Application Navigator" />
+    <meta name="twitter:site" content="@str8greencard" />
+    <meta name="twitter:image" content="/lovable-uploads/88567fb0-7213-4614-b9e3-55a0693cc568.png" />
   </head>
 
   <body>
